Bug 416925 - KML/KMZ files marble can't parse cause error popups if KML/KMZ previews are enabled
Summary: KML/KMZ files marble can't parse cause error popups if KML/KMZ previews are e...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-29 18:58 UTC by erik_hahn
Modified: 2020-11-03 11:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description erik_hahn 2020-01-29 18:58:18 UTC
SUMMARY
The KML/KMZ thumbnailer displays distracting error popups when it encounters a file it cannot parse. This includes both truly invalid files and files Google Earth can deal with but Marble cannot such as http://www.dereglobus.orkenspalter.de/public/DereGlobus.kmz .

STEPS TO REPRODUCE
1. In an empty directory, touch test.kml
2. Make sure the KML Geographic Data thumbnailer is enabled in Dolphin preferences
3. Visit the directory containing test.kml in Dolphin

OBSERVED RESULT
A message window pops up, the title is "File Parsing Error" and the message is "Invalid document".

EXPECTED RESULT
Nothing visible should happen

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION
Comment 1 Stefan Brüns 2020-10-29 18:47:38 UTC
The linked DereGlobus.kmz is not valid KML, it contains an 'ü' in Latin-1 or similar encoding (part of the string "Menü"), though the file specifies it is encoded in UTF-8.
Comment 2 Stefan Brüns 2020-11-03 11:08:24 UTC
Git commit 5e2c369a754a7457f2a746edd057ccc475c962af by Stefan Brüns.
Committed on 02/11/2020 at 17:19.
Pushed by rahn into branch 'master'.

Dont open a MessageBox when a file fails to load from the library

As the filemanager is also used from non-interactive contexts, a message
box is a no-go.

Interactive applications can connect to the fileError signal. This is
done for both marble-qt and marble-kde.
Related: bug 420089

M  +8    -0    src/apps/marble-kde/marble_part.cpp
M  +8    -0    src/apps/marble-qt/QtMainWindow.cpp
M  +0    -6    src/lib/marble/FileManager.cpp

https://invent.kde.org/education/marble/commit/5e2c369a754a7457f2a746edd057ccc475c962af