Dont open a MessageBox when a file fails to load from the library

As the filemanager is also used from non-interactive contexts, a message
box is a no-go.

Interactive applications can connect to the fileError signal. This is
done for both marble-qt and marble-kde.

BUG: 416925
CCBUG: 420089